--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
     username: admin
     password: 1q2w3e4r
 
+  security:
+    user:
+      name: admin
+      password: 1q2w3e4r
+
 mybatis:
   mapper-locations:
     - /mappers/*.xml
