--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb:/web-study.c6wohwfgcd77.ap-northeast-2.rds.amazonaws.com:3306/stussy-20220929-hyelyeon
+    url: jdbc:mariadb:/web-study.c6wohwfgcd77.ap-northeast-2.rds.amazonaws.com:3306/stussy-20220929-hyelyeon?allowMultiQueries=true
     username: admin
     password: 1q2w3e4r
 
